<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_chat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "Test Toolbar"
        android:id="@+id/ToolStart" />

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        />

    <Button
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weather Forecast" />


</LinearLayout>