<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/RadioButtonstring"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/CheckboxString"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/switchstring"
        android:layout_columnWeight="1"
        android:gravity="fill"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

</GridLayout>